implement PWA support with service worker registration and install prompt

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,22 @@
 server {
     listen 80;
 
+    include /etc/nginx/mime.types;
+    types {
+        application/manifest+json webmanifest;
+    }
+
     location /api/ {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Service worker - must not be cached
+    location /sw.js {
+        root /usr/share/nginx/html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Service-Worker-Allowed "/";
     }
 
     location / {
