add Playwright end-to-end tests and update language context imports

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,13 @@ infrastructure/samconfig.toml
 # macOS
 .DS_Store
 
+# Playwright
+e2e/node_modules/
+e2e/test-results/
+e2e/playwright-report/
+e2e/playwright/.cache/
+e2e/.auth/
+
 # Temporary files
 *.tmp
 *.temp
