--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,12 @@
 name: Deploy to AWS
 
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -14,12 +18,88 @@ permissions:
   contents: read
 
 jobs:
+  verify-tests:
+    name: Verify Tests (Manual Deploy Only)
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '10.0.x'
+
+      - name: Run Backend Tests
+        run: |
+          dotnet restore
+          dotnet build --configuration Release
+          dotnet test --no-build --configuration Release --verbosity normal
+
+      - name: Run Frontend Tests
+        working-directory: frontend
+        run: |
+          npm ci
+          npm run lint
+          npm run build
+
+      - name: Setup Docker for E2E Tests
+        run: docker compose up -d --build
+
+      - name: Wait for Services
+        run: |
+          for i in $(seq 1 30); do
+            if curl -sf http://localhost:4000/api/health > /dev/null 2>&1; then
+              echo "Services are healthy"
+              exit 0
+            fi
+            echo "Waiting... ($i/30)"
+            sleep 2
+          done
+          echo "Services failed to start"
+          exit 1
+
+      - name: Run E2E Tests
+        working-directory: e2e
+        run: |
+          npm ci
+          npx playwright install --with-deps chromium
+          npx playwright test
+
+      - name: Stop Services
+        if: always()
+        run: docker compose down
+
+  check-ci-status:
+    name: Check CI Workflow Status
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_run'
+    steps:
+      - name: Verify CI Workflow Succeeded
+        env:
+          CONCLUSION: ${{ github.event.workflow_run.conclusion }}
+        run: |
+          if [ "$CONCLUSION" != "success" ]; then
+            echo "CI workflow did not succeed. Conclusion: $CONCLUSION"
+            exit 1
+          fi
+          echo "CI workflow succeeded. Proceeding with deployment."
+
   deploy-backend:
     name: Deploy Backend (Lambda)
     runs-on: ubuntu-latest
+    needs: [verify-tests, check-ci-status]
+    if: |
+      !failure() && !cancelled() &&
+      (
+        (github.event_name == 'workflow_dispatch' && needs.verify-tests.result == 'success') ||
+        (github.event_name == 'workflow_run' && needs.check-ci-status.result == 'success')
+      )
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || github.sha }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -42,6 +122,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || github.sha }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
