--- a/backend/Encourager.Api.csproj
+++ b/backend/Encourager.Api.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Encourager.Api.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="9.2.0" />
   </ItemGroup>
