--- a/infrastructure/samconfig.toml
+++ b/infrastructure/samconfig.toml
@@ -12,5 +12,5 @@ parallel = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = false
 fail_on_empty_changeset = false
-region = "us-east-1"
+region = "eu-north-1"
 resolve_s3 = true
