--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,7 @@ jobs:
   deploy-backend:
     name: Deploy Backend (Lambda)
     runs-on: ubuntu-latest
+    environment: production
     needs: [verify-tests, check-ci-status]
     if: |
       !failure() && !cancelled() &&
@@ -118,6 +119,7 @@ jobs:
   deploy-frontend:
     name: Deploy Frontend (S3 + CloudFront)
     runs-on: ubuntu-latest
+    environment: production
     needs: deploy-backend
     steps:
       - name: Checkout code
