--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./backend
     expose:
       - "8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
 
   frontend:
     build: ./frontend
